--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -52,13 +52,12 @@
           <ion-label class="head_gray">{{'ITEMS' | translate}}</ion-label>
           <div class="small_lbl">
             <ion-label *ngFor="let order of item.order">{{order.quantiy}} X {{order.name}} <span
-                class="prize">${{order.price}}</span></ion-label>
-            <!-- <ion-label>1 X Bhaji Pav <span class="prize">$20</span></ion-label> -->
+                class="prize">{{'currencyCode' | translate}} {{order.price}}</span></ion-label>
           </div>
           <ion-label class="head_gray">{{'ORDERED ON' | translate}}</ion-label>
           <ion-label class="small_lbl">{{item.time}} </ion-label>
           <ion-label class="head_gray">{{'TOTAL AMOUNT' | translate}}</ion-label>
-          <ion-label class="small_lbl">${{item.grandTotal}}</ion-label>
+          <ion-label class="small_lbl">{{'currencyCode' | translate}} {{item.grandTotal}}</ion-label>
         </div>
 
       </div>
@@ -104,13 +103,12 @@
           <ion-label class="head_gray">{{'ITEMS' | translate}}</ion-label>
           <div class="small_lbl">
             <ion-label *ngFor="let order of item.order">{{order.quantiy}} X {{order.name}} <span
-                class="prize">${{order.price}}</span></ion-label>
-            <!-- <ion-label>1 X Bhaji Pav <span class="prize">$20</span></ion-label> -->
+                class="prize">{{'currencyCode' | translate}} {{order.price}}</span></ion-label>
           </div>
           <ion-label class="head_gray">{{'ORDERED ON' | translate}}</ion-label>
           <ion-label class="small_lbl">{{item.time}} </ion-label>
           <ion-label class="head_gray">{{'TOTAL AMOUNT' | translate}}</ion-label>
-          <ion-label class="small_lbl">${{item.grandTotal}}</ion-label>
+          <ion-label class="small_lbl">{{'currencyCode' | translate}} {{item.grandTotal}}</ion-label>
         </div>
 
       </div>
@@ -156,13 +154,12 @@
           <ion-label class="head_gray">{{'ITEMS' | translate}}</ion-label>
           <div class="small_lbl">
             <ion-label *ngFor="let order of item.order">{{order.quantiy}} X {{order.name}} <span
-                class="prize">${{order.price}}</span></ion-label>
-            <!-- <ion-label>1 X Bhaji Pav <span class="prize">$20</span></ion-label> -->
+                class="prize">{{'currencyCode' | translate}} {{order.price}}</span></ion-label>
           </div>
           <ion-label class="head_gray">{{'ORDERED ON' | translate}}</ion-label>
           <ion-label class="small_lbl">{{item.time}} </ion-label>
           <ion-label class="head_gray">{{'TOTAL AMOUNT' | translate}}</ion-label>
-          <ion-label class="small_lbl">${{item.grandTotal}}</ion-label>
+          <ion-label class="small_lbl">{{'currencyCode' | translate}} {{item.grandTotal}}</ion-label>
         </div>
 
       </div>
