--- a/src/app/pages/tracker/tracker.page.html
+++ b/src/app/pages/tracker/tracker.page.html
@@ -27,7 +27,7 @@
       </div>
 
       <ion-label class="order_detail">{{totalOrders.length}} {{'Items to deliver' | translate}}<span
-          style="color: var(--ion-color-primary);position: absolute;right: 20px;">{{grandTotal}}$</span></ion-label>
+          style="color: var(--ion-color-primary);position: absolute;right: 20px;">{{'currencyCode' | translate}} {{grandTotal}}</span></ion-label>
       <ion-label class="order_detail">{{'Order Status' | translate}}<span class="order_status">{{paid}}</span></ion-label>
 
     </div>
