--- a/src/app/pages/venue-profile/venue-profile.page.scss
+++ b/src/app/pages/venue-profile/venue-profile.page.scss
@@ -8,6 +8,11 @@ ion-item{
         margin: 10px 0px !important;
         font-weight: bold;
     }
+    .lbl-disclaimer{
+        color: var(--ion-color-dark);
+        margin: 10px 0px !important;
+        font-style: italic;
+    }
     .inputText{
         border: 0.5px solid lightgray;
         border-radius: 5px;
