--- a/src/app/pages/foods/foods.page.html
+++ b/src/app/pages/foods/foods.page.html
@@ -34,15 +34,11 @@
 
       <div *ngFor="let food of foods;">
         <span *ngIf="item.id == food.cid.id" class="card_div" (click)="foodsInfo(food)">
-          <!-- <div class="back_image" [style.backgroundImage]="'url('+food.cover+')'"></div> -->
           <img [src]="food.cover" class="back_image" alt="">
           <div class="content_div">
             <ion-label class="title">{{food.name}}</ion-label>
             <ion-label class="small">{{food.desc}}</ion-label>
-            <ion-label *ngIf="food.veg" class="veg">Veg</ion-label>
-            <ion-label *ngIf="!food.veg" class="nonVeg">Non Veg</ion-label>
-
-            <ion-label class="title">$ {{food.price}}</ion-label>
+            <ion-label class="price">{{'currencyCode' | translate}} {{food.price}}</ion-label>
           </div>
         </span>
       </div>
