--- a/src/app/pages/foods/foods.page.scss
+++ b/src/app/pages/foods/foods.page.scss
@@ -75,6 +75,12 @@
                 font-weight: 600;
                 font-size: 16px;
             }
+            .price{
+                font-weight: 600;
+                font-size: 16px;
+                margin-top: 10px;
+                font-weight: bold;
+            }
             .small{
                 color: gray;
                 font-size: 14px;
