[master] Update Cuisine Type translation

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -2,10 +2,10 @@
 
   <div class="main_content_div">
 
-    <div class="back_image" [style.backgroundImage]="'url(assets/imgs/back_image.jpg)'">
+    <div class="back_image" [style.backgroundImage]="'url('+cover+')'">
 
     </div>
-    <div class="white_div" [style.backgroundImage]="'url('+cover+')'"></div>
+    <div class="white_div" [style.backgroundImage]="'url(assets/imgs/chef.png)'"></div>
 
     <div class="content_div">
       <ion-label class="usernane">{{name}}</ion-label>
