[master] Change app color

--- a/src/app/pages/analytics/analytics.page.scss
+++ b/src/app/pages/analytics/analytics.page.scss
@@ -28,7 +28,7 @@
         padding:20px
     }
     .amount{
-        background: #ff384c;
+        background: #8BC34A;
         color: white;
         padding: 20px;
         font-weight: bold;
