--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #ff384c;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #FF9800;
+  --ion-color-primary-rgb: 255, 193, 7;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #ff384c;
-  --ion-color-primary-tint: #ff384c;
+  --ion-color-primary-shade: #F57C00;
+  --ion-color-primary-tint: #FF9800;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
