[master] Add Minimum Purchase Charge

--- a/src/app/pages/order-detail/order-detail.page.html
+++ b/src/app/pages/order-detail/order-detail.page.html
@@ -108,6 +108,8 @@
             {{total}}</span></ion-label>
         <ion-label class="small_lbl2">{{'Delivery Charge' | translate}}<span
             class="prize1">{{'currencyCode' | translate}} {{deliveryCharge}}</span></ion-label>
+        <ion-label class="small_lbl2" *ngIf="minimumPurchaseCharge">{{'Under Minimum Charges' | translate}}<span
+            class="prize1">{{'currencyCode' | translate}} {{minimumPurchaseCharge}}</span></ion-label>
         <ion-label class="small_lbl2">{{'Total' | translate}}<span class="prize1">{{'currencyCode' | translate}}
             {{grandTotal}}</span></ion-label>
       </div>
